# ccs_toolbox

./: .gitignore  LICENSE  README.md  ccs_environment.yml  ccs_requirements.txt  pyproject.toml  verify_ccstools.py
.github/workflows/: publish.yml  python-package.yml
ccstools/: __init__.py  eegfeatures.py  eegfeatures_fast.py  eegfeatures_fast_v01.py  embla.py  emd.py  fileio.py  limo_tfce_replicate.py  lz_functions.py  ml_realtime.py  mne2EDF.py  mne_asr.py  mne_asr_utils.py  noneegfeatures.py  pci.py  plot.py  psv_sdg_brain_heart_model.py  recording.py  sigproc.py  similarity_matrix.py  stimulation.py  waves.py  yasafeatures.py
ccstools/ccs_eeg/: __init__.py  pipeline.py  utils.py
ccstools/ccs_eeg/gedai/: __init__.py  gedai_algo.py  utils.py
ccstools/ccs_eeg/resources/resource_headplot/: chanloc_10-05_346.mat  chanloc_10-10_70.mat  chanloc_GSN_HydroCel_129.mat  chanloc_GSN_HydroCel_129_10-10.mat  chanpos_MNI.csv  chanpos_Tal.csv
